[debugger] IDEA-388316 Implement HotSwap support for instrumentation breakpoints
GitOrigin-RevId: caa75b2596be36b18271692b0a89157c67f56496